--- a/Resources/administration/src/app/component/media/sw-media-modal-folder-settings/sw-media-modal-folder-settings.html.twig
+++ b/Resources/administration/src/app/component/media/sw-media-modal-folder-settings/sw-media-modal-folder-settings.html.twig
@@ -74,7 +74,7 @@
                                     {% block sw_media_modal_folder_settings_generate_thumbnails_field %}
                                         <sw-field type="boolean"
                                                   :label="$tc('global.sw-media-modal-folder-settings.labelGenerateThumbnails')"
-                                                  v-model="folder.configuration.createThumbnails"
+                                                  v-model="configuration.createThumbnails"
                                                   :disabled="folder.useParentConfiguration">
                                         </sw-field>
                                     {% endblock %}
@@ -82,7 +82,7 @@
                                     {% block sw_media_modal_folder_settings_keep_proportions_field %}
                                         <sw-field type="boolean"
                                                   :label="$tc('global.sw-media-modal-folder-settings.labelKeepProportions')"
-                                                  v-model="folder.configuration.keepAspectRatio"
+                                                  v-model="configuration.keepAspectRatio"
                                                   :disabled="notEditable">
                                         </sw-field>
                                     {% endblock %}
@@ -91,8 +91,8 @@
                                         <sw-field
                                                 type="number"
                                                 :label="$tc('global.sw-media-modal-folder-settings.labelThumbnailQuality')"
-                                                v-model="folder.configuration.thumbnailQuality"
-                                                :validation="folder.configuration.thumbnailQuality >= 0 &&  folder.configuration.thumbnailQuality <= 100"
+                                                v-model="configuration.thumbnailQuality"
+                                                :validation="configuration.thumbnailQuality >= 0 &&  configuration.thumbnailQuality <= 100"
                                                 min="0"
                                                 max="100"
                                                 :disabled="notEditable">
