--- a/Resources/administration/src/app/component/form/sw-condition-tree/sw-condition-base/sw-condition-base.html.twig
+++ b/Resources/administration/src/app/component/form/sw-condition-tree/sw-condition-base/sw-condition-base.html.twig
@@ -2,17 +2,14 @@
 <div class="sw-condition-base" :class="[conditionClass, { 'has--error': hasErrors }]">
     <div class="sw-condition-base__container">
         {% block sw_condition_field_condition %}
-            <sw-field type="select"
-                      name="type"
-                      v-model="condition.type"
-                      class="field field--select field--condition"
-                      :title="$tc(getLabel(condition.type))">
-                <option v-for="(innerCondition, innerConditionType) in ruleConditionDataProviderService.getConditions()"
-                        :selected="innerConditionType === condition.type"
-                        :value="innerConditionType">
-                    {{ $tc(getLabel(innerConditionType)) }}
-                </option>
-            </sw-field>
+            <sw-select
+                    id="condition"
+                    :store="conditionStore"
+                    :value="condition.type"
+                    displayName="label"
+                    class="field field--select">
+
+            </sw-select>
         {% endblock %}
 
         {% block sw_condition_fields %}
@@ -41,7 +38,7 @@
                     <sw-context-menu-item @click="$emit('delete-condition', condition)"
                                           :disabled="disableContextDeleteButton"
                                           variant="danger">
-                        {{ $tc('sw-settings-rule.list.contextMenuDelete') }}
+                        {{ $tc('global.sw-condition.condition.delete') }}
                     </sw-context-menu-item>
                 </sw-context-button>
             </div>
