--- a/Resources/administration/src/app/component/form/sw-condition-tree/sw-condition-or-container/sw-condition-or-container.html.twig
+++ b/Resources/administration/src/app/component/form/sw-condition-tree/sw-condition-or-container/sw-condition-or-container.html.twig
@@ -1,14 +1,14 @@
 {% block sw_condition_container %}
-    <div class="sw-condition-and-container" :class="containerRowClass">
+    <div class="sw-condition-or-container " :class="containerRowClass">
         {% block sw_condition_container_content %}
-            <div class="sw-condition-and-container__condition-content">
+            <div class="sw-condition-or-container__condition-content">
                 {% block sw_condition_container_children %}
                     <div v-for="(child, index) in sortedChildren"
                          :key="index">
                         {% block sw_condition_container_children_spacer %}
                             <div v-if="index"
-                                 class="condition-content__spacer--and">
-                                {{ $tc('global.sw-condition.condition.and') }}
+                                 class="condition-content__spacer--or">
+                                {{ $tc('global.sw-condition.condition.or').toUpperCase() }}
                             </div>
                         {% endblock %}
                         {% block sw_condition_container_children_component %}
@@ -16,6 +16,8 @@
                                        :condition="child"
                                        :conditionAssociations="conditionAssociations"
                                        :level="level + 1"
+                                       :conditionStore="conditionStore"
+                                       :entityName="entityName"
                                        @delete-condition="onDeleteCondition"
                                        @create-before="createPlaceholderBefore"
                                        @create-after="createPlaceholderAfter">
@@ -24,14 +26,14 @@
                     </div>
                 {% endblock %}
                 {% block sw_condition_container_actions %}
-                    <div class="sw-condition-and-container__actions">
-                        <sw-button class="sw-condition-and-container__actions--and" @click="onAddAndClick">
-                            {{ $tc('global.sw-condition.condition.and') }}
+                    <div class="sw-condition-or-container__actions">
+                        <sw-button class="sw-condition-or-container__actions--or" @click="onAddAndClick">
+                            {{ $tc('global.sw-condition.condition.or') }}
                         </sw-button>
-                        <sw-button class="sw-condition-and-container__actions--sub" @click="onAddChildClick">
+                        <sw-button v-if="level !== 0" class="sw-condition-or-container__actions--sub" @click="onAddChildClick">
                             {{ $tc('global.sw-condition.condition.subCondition') }}
                         </sw-button>
-                        <sw-button class="sw-condition-and-container__actions--delete"
+                        <sw-button class="sw-condition-or-container__actions--delete"
                                    :disabled="disabledDeleteButton"
                                    @click="onDeleteAll">
                             {{ $tc('global.sw-condition.condition.deleteConditions') }}
