--- a/Resources/administration/src/module/sw-settings-rule/page/sw-settings-rule-detail/sw-settings-rule-detail.html.twig
+++ b/Resources/administration/src/module/sw-settings-rule/page/sw-settings-rule-detail/sw-settings-rule-detail.html.twig
@@ -62,13 +62,7 @@
 
                 {% block sw_settings_rule_detail_conditions_card %}
                     <sw-card class="sw-settings-rule-detail__condition_container" :large="true" :title="$tc('sw-settings-rule.detail.ruleCard')">
-                        <component v-if="nestedConditions"
-                                   is="sw-condition-or-container"
-                                   :condition="nestedConditions"
-                                   :conditionAssociations="conditionAssociations"
-                                   :level="0"
-                                   ref="mainContainer">
-                        </component>
+                        <sw-condition-tree :store="ruleStore" :conditionStore="ruleConditionStore" ref="conditionTree"></sw-condition-tree>
                     </sw-card>
                 {% endblock %}
             </sw-card-view>
