--- a/Resources/administration/src/module/sw-settings-snippet/page/sw-settings-snippet-list/sw-settings-snippet-list.html.twig
+++ b/Resources/administration/src/module/sw-settings-snippet/page/sw-settings-snippet-list/sw-settings-snippet-list.html.twig
@@ -1,5 +1,14 @@
 {% block sw_settings_snippet_list %}
     <sw-page class="sw-settings-snippet-list">
+        {% block sw_settings_snippet_set_list_search_bar %}
+            <template slot="search-bar">
+                <sw-search-bar :placeholder="$tc('sw-settings-snippet.general.placeholderSearchBarSnippets')"
+                               :searchType="$tc('sw-settings-snippet.general.mainMenuItemGeneral')"
+                               @search="onSearch">
+                </sw-search-bar>
+            </template>
+        {% endblock %}
+
         {% block sw_settings_snippet_list_smart_bar_header %}
             <template slot="smart-bar-header">
                 {% block sw_settings_snippet_list_smart_bar_header_title %}
