NTR - Fix folders in administration

--- a/Resources/administration/src/app/component/media/sw-media-base-item/sw-media-base-item.html.twig
+++ b/Resources/administration/src/app/component/media/sw-media-base-item/sw-media-base-item.html.twig
@@ -1,5 +1,8 @@
 {%  block sw_media_base_item %}
-    <div class="sw-media-base-item" :class="mediaItemClasses" @click="handleItemClick">
+    <div class="sw-media-base-item"
+         :class="mediaItemClasses"
+         @click="handleItemClick">
+
         {% block sw_media_base_item_selected_indicator %}
             <div v-if="!isList"
                  class="sw-media-base-item__selected-indicator"
