--- a/Resources/administration/src/app/component/media/sw-media-folder-item/sw-media-folder-item.html.twig
+++ b/Resources/administration/src/app/component/media/sw-media-folder-item/sw-media-folder-item.html.twig
@@ -31,6 +31,7 @@
                                      :color="iconConfig.color">
                             </sw-icon>
                             <sw-icon :name="iconConfig.name"
+                                     size="45%"
                                      class="sw-media-folder-item__folder-thumbnails is--inner"
                                      :color="iconConfig.color">
                             </sw-icon>
