--- a/Resources/administration/src/module/sw-settings-rule/component/sw-condition-and-container/sw-condition-and-container.html.twig
+++ b/Resources/administration/src/module/sw-settings-rule/component/sw-condition-and-container/sw-condition-and-container.html.twig
@@ -31,7 +31,9 @@
                         <sw-button class="sw-condition-and-container__actions--sub" @click="onAddChildClick">
                             {{ $tc('global.sw-condition.condition.subCondition') }}
                         </sw-button>
-                        <sw-button class="sw-condition-and-container__actions--delete" @click="onDeleteAll">
+                        <sw-button class="sw-condition-and-container__actions--delete"
+                                   :disabled="disabledDeleteButton"
+                                   @click="onDeleteAll">
                             {{ $tc('global.sw-condition.condition.deleteConditions') }}
                         </sw-button>
                     </div>
