NEXT-1326 - Add media replace spec

--- a/Resources/administration/src/app/component/media/sw-media-media-item/sw-media-media-item.html.twig
+++ b/Resources/administration/src/app/component/media/sw-media-media-item/sw-media-media-item.html.twig
@@ -43,7 +43,7 @@
                                 {% endblock %}
 
                                 {% block sw_media_media_item_context_item_replace %}
-                                    <sw-context-menu-item @click="openModalReplace">
+                                    <sw-context-menu-item class="sw-media-context-item__replace-media-action"  @click="openModalReplace">
                                         {{ $tc('global.sw-media-media-item.labelContextMenuReplace') }}
                                     </sw-context-menu-item>
                                 {% endblock %}
