--- a/Resources/administration/src/app/component/media/sw-media-modal-replace/sw-media-modal-replace.html.twig
+++ b/Resources/administration/src/app/component/media/sw-media-modal-replace/sw-media-modal-replace.html.twig
@@ -21,7 +21,7 @@
                 {% endblock %}
 
                 {% block sw_media_modal_replace_replace_button %}
-                    <sw-button size="small" variant="primary" @click="replaceMediaItem" :disabled="!isUploadDataSet">
+                    <sw-button class="sw-media-replace__replace-media-action" size="small" variant="primary" @click="replaceMediaItem" :disabled="!isUploadDataSet">
                         {{ $tc('global.sw-media-modal-replace.buttonReplace') }}
                     </sw-button>
                 {% endblock %}
