--- a/Resources/administration/src/module/sw-settings-rule/extension/sw-settings-index/sw-settings-index.html.twig
+++ b/Resources/administration/src/module/sw-settings-rule/extension/sw-settings-index/sw-settings-index.html.twig
@@ -3,7 +3,7 @@
 
     {% block sw_settings_rule_item %}
         <sw-settings-item :label="$tc('sw-settings-rule.general.mainMenuItemGeneral')"
-                          :to="{ name: 'sw.settings.rules.index' }">
+                          :to="{ name: 'sw.settings.rule.index' }">
             <template slot="icon">
                 <svg width="80px" height="80px" viewBox="0 0 80 80" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                     <defs>
